fix spacing issue with time and attempt cards.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,7 +109,7 @@ body {
     transform: rotateY(0);
 }
 
-/* reset button / time attempt cards */
+/* reset button / time & attempt cards */
 .controls {
     display: flex;
     flex-direction: column;
@@ -134,6 +134,12 @@ body {
 
 #resetBtn {
     margin-top: 15px;
+}
+
+.stats-row {
+    display: flex;
+    justify-content: center;
+    gap: 14px;
 }
 
 /* Modal (hidden by default) */
